package com.spe.model;

public enum PapelUsuario { OPERADOR, GERENTE }
