package com.spe.model;

public enum TipoAlerta { VENCIMENTO_PROXIMO, VENCIDO, ESTOQUE_BAIXO }
