package com.spe.model;

public enum TipoMovimentacao { ENTRADA, SAIDA, AJUSTE, DESCARTE }
